Box alignment UI fixed

--- a/HPCL-Web/wwwroot/assets/css/style.css
+++ b/HPCL-Web/wwwroot/assets/css/style.css
@@ -773,6 +773,7 @@ div#loader {
     align-items: center !important;
     text-align: center;
     border: 1px solid #ccc;
+    min-height:176px;
 }
 
     .dashboard_thumb:hover {
